--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 spring.application.name=hospital_management
-
+server.port=8081
 # Configuración de la base de datos MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/hospital_db
-spring.datasource.username=hospital_user
-spring.datasource.password=password
+spring.datasource.username=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuración de JPA
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=never
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
